feature: modification de la structure et du style du header

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- TODO: changer pour les fonts sélectionnés -->
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&display=swap"
         rel="stylesheet">
+
+    <!-- TODO: ajouter la source des images -->
 </head>
 
 <body>
@@ -45,6 +47,12 @@
                     </li>
                 </ul>
             </nav>
+        </div>
+        <div class="header__wrapper">
+            <img src="./public/img/header_illustration.jpg" alt="Illustration d'une femme devant un ordinateur">
+        </div>
+        <div class="header__tagline">
+            <h1 class="header__title">Meilleure phrase d'accroche possible</h1>
         </div>
     </header>
     <main class="main">
