fix: correction du code HTML pour passer la validation  w3c

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./public/css/style.css">
     <title>Targeet - Plateforme pour Talents et Entreprises</title>
-    <link rel="shortcut icon" href="./public/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./public/img/favicon.ico" type="image/x-icon">
     <!-- TODO: changer avec un kit Targeet -->
     <script src="https://kit.fontawesome.com/a1751d2ab0.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
         <div class="header__container">
             <div class="header__logo">
                 <a href="/">
-                    <img src="./public/img/target_logo.svg" alt="Logo de Targeet" class="header__logo-image" />
+                    <img src="./public/img/target_logo.svg" alt="Logo de Targeet" class="header__logo-image">
                 </a>
             </div>
             <nav class="header__navbar">
@@ -59,7 +59,7 @@
         <section id="about-us" class="about-us">
             <div class="about-us__container">
                 <div class="about-us__image-container">
-                    <img src="about-us-image.jpg" alt="Illustration de la section About Us" class="about-us__image" />
+                    <img src="about-us-image.jpg" alt="Illustration de la section About Us" class="about-us__image">
                 </div>
                 <div class="about-us__articles">
                     <article class="about-us__article">
@@ -124,27 +124,27 @@
                 <h2 class="profiles__title">Technologies Microsoft</h2>
                 <div class="profiles__container">
                     <div class="profiles__item">
-                        <img src="azure-logo.png" alt="Microsoft Azure" class="profiles__item-image" />
+                        <img src="azure-logo.png" alt="Microsoft Azure" class="profiles__item-image">
                         <h3 class="profiles__item-title">
                             Microsoft Azure
                         </h3>
                     </div>
                     <div class="profiles__item">
-                        <img src="m365-logo.png" alt="Microsoft 365" class="profiles__item-image" />
+                        <img src="m365-logo.png" alt="Microsoft 365" class="profiles__item-image">
                         <h3 class="profiles__item-title">Microsoft 365</h3>
                     </div>
                     <div class="profiles__item">
-                        <img src="teams-logo.png" alt="Microsoft Teams" class="profiles__item-image" />
+                        <img src="teams-logo.png" alt="Microsoft Teams" class="profiles__item-image">
                         <h3 class="profiles__item-title">
                             Microsoft Teams
                         </h3>
                     </div>
                     <div class="profiles__item">
-                        <img src="dynamics-logo.png" alt="Dynamics 365" class="profiles__item-image" />
+                        <img src="dynamics-logo.png" alt="Dynamics 365" class="profiles__item-image">
                         <h3 class="profiles__item-title">Dynamics 365</h3>
                     </div>
                     <div class="profiles__item">
-                        <img src="power-platform-logo.png" alt="Power Platform" class="profiles__item-image" />
+                        <img src="power-platform-logo.png" alt="Power Platform" class="profiles__item-image">
                         <h3 class="profiles__item-title">Power Platform</h3>
                     </div>
                 </div>
@@ -220,14 +220,14 @@
                     Remplissez le formulaire ci-dessous pour nous contacter
                     ou postuler à une offre.
                 </p>
-                <form class="modal__form" action="[URL_DU_SERVEUR]" method="POST" enctype="multipart/form-data">
+                <form class="modal__form" action="localhost" method="POST" enctype="multipart/form-data">
                     <!-- Prénom -->
                     <div class="modal__field">
                         <label for="firstname" class="modal__label">
                             Prénom *
                         </label>
                         <input type="text" id="firstname" name="firstname" class="modal__input"
-                            placeholder="Votre prénom" required />
+                            placeholder="Votre prénom" required>
                     </div>
                     <!-- Nom -->
                     <div class="modal__field">
@@ -235,7 +235,7 @@
                             Nom *
                         </label>
                         <input type="text" id="lastname" name="lastname" class="modal__input" placeholder="Votre nom"
-                            required />
+                            required>
                     </div>
                     <!-- Email -->
                     <div class="modal__field">
@@ -243,7 +243,7 @@
                             Email *
                         </label>
                         <input type="email" id="email" name="email" class="modal__input" placeholder="Votre email"
-                            required />
+                            required>
                     </div>
                     <!-- Message -->
                     <div class="modal__field">
@@ -258,7 +258,7 @@
                         <label for="cv" class="modal__label">
                             Joindre votre CV (PDF, max. 5 Mo)
                         </label>
-                        <input type="file" id="cv" name="cv" class="modal__input-file" accept=".pdf" />
+                        <input type="file" id="cv" name="cv" class="modal__input-file" accept=".pdf">
                     </div>
                     <!-- Bouton d'envoi -->
                     <button type="submit" class="modal__button">
