fix: ajout des images manquantes. feature: début de la partie à propos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
         <section id="about-us" class="about-us">
             <div class="about-us__container">
                 <div class="about-us__image-container">
-                    <img src="about-us-image.jpg" alt="Illustration de la section About Us" class="about-us__image">
+                    <!-- Cercle -->
+                    <div class="circle">
+                        <img src="./public/img/target_logo_circle.svg" alt="Cercle" />
+                    </div>
+
+                    <!-- Loupe -->
+                    <div class="loupe">
+                        <img src="./public/img/target_logo_loupe.svg" alt="Loupe" />
+                    </div>
+
+                    <!-- Bonhomme -->
+                    <div class="guy">
+                        <img src="./public/img/target_logo_guy.svg" alt="Bonhomme" />
+                    </div>
                 </div>
                 <div class="about-us__articles">
                     <article class="about-us__article">
