feature: fin de la partie à propos

--- a/index.html
+++ b/index.html
@@ -60,48 +60,79 @@
             <div class="about-us__container">
                 <div class="about-us__image-container">
                     <!-- Cercle -->
-                    <div class="circle">
+                    <div class="about-us__circle">
                         <img src="./public/img/target_logo_circle.svg" alt="Cercle" />
                     </div>
 
                     <!-- Loupe -->
-                    <div class="loupe">
-                        <img src="./public/img/target_logo_loupe.svg" alt="Loupe" />
+                    <div class="about-us__magnifier">
+                        <img src="./public/img/target_logo_magnifier.svg" alt="Loupe" />
                     </div>
 
                     <!-- Bonhomme -->
-                    <div class="guy">
+                    <div class="about-us__guy">
                         <img src="./public/img/target_logo_guy.svg" alt="Bonhomme" />
                     </div>
                 </div>
                 <div class="about-us__articles">
                     <article class="about-us__article">
-                        <h2 class="about-us__title">Notre histoire</h2>
-                        <p class="about-us__text">
-                            Découvrez l'origine et les valeurs de Targeet.
-                        </p>
+                        <div class="about-us__content--1">
+                            <h2 class="about-us__title">Notre histoire</h2>
+                            <p class="about-us__text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente excepturi repellendus
+                                harum incidunt cumque distinctio maxime, accusantium ex quasi natus deleniti voluptatibus ad
+                                ipsum labore exercitationem sequi hic eum temporibus aliquid, iste doloremque. Aliquam,
+                                nihil temporibus. Quasi exercitationem soluta provident! Assumenda, possimus quisquam vero
+                                ratione doloremque temporibus, aut aperiam totam nulla labore facere voluptate, aliquam
+                                eaque ullam officiis provident quibusdam obcaecati repellat porro odio. Aliquam sit quo
+                                porro id fugiat!
+                            </p>
+                        </div>
                     </article>
+                    <div class="about-us__wraper"></div>
                     <article class="about-us__article">
-                        <h2 class="about-us__title">Nos valeurs</h2>
-                        <p class="about-us__text">
-                            Respect, transparence et innovation au cœur de
-                            nos actions.
-                        </p>
+                        <div class="about-us__content--2">
+                            <h2 class="about-us__title">Nos valeurs</h2>
+                            <p class="about-us__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sequi deserunt eaque dolores
+                                et sunt totam consectetur cupiditate exercitationem ratione accusamus excepturi, repudiandae
+                                similique reprehenderit qui suscipit officiis porro voluptatem, fuga possimus. Nisi
+                                consequatur omnis animi quis provident laudantium eos sapiente perferendis soluta quae
+                                necessitatibus possimus natus voluptatibus, voluptatem inventore officia rerum cum veniam.
+                                Quo!
+                            </p>
+                        </div>
                     </article>
+                    <div class="about-us__wraper"></div>
                     <article class="about-us__article">
-                        <h2 class="about-us__title">Notre équipe</h2>
-                        <p class="about-us__text">
-                            Une équipe engagée et passionnée à votre
-                            service.
-                        </p>
+                        <div class="about-us__content--3">
+                            <h2 class="about-us__title">Notre équipe</h2>
+                            <p class="about-us__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga ipsum quam reiciendis labore
+                                quis, atque eos sapiente, maxime beatae laudantium distinctio consequuntur temporibus
+                                voluptatum quo dolorem, asperiores quasi eius libero! Dolor minima nisi veritatis inventore
+                                facere obcaecati quod nostrum, neque saepe temporibus voluptatem placeat! Omnis suscipit
+                                architecto dignissimos vel. Laboriosam possimus doloribus nam quidem autem cumque
+                                accusantium, soluta modi saepe laborum suscipit perspiciatis quibusdam deserunt! Modi
+                                aperiam excepturi aliquam ducimus perferendis necessitatibus rerum, a, nesciunt atque eos
+                                reprehenderit commodi sequi?
+                            </p>
+                        </div>
                     </article>
+                    <div class="about-us__wraper"></div>
                     <article class="about-us__article">
-                        <h2 class="about-us__title">Nos projets</h2>
-                        <p class="about-us__text">
-                            Découvrez les projets qui façonnent l'avenir
-                            avec Targeet.
-                        </p>
+                        <div class="about-us__content--4">
+                            <h2 class="about-us__title">Nos projets</h2>
+                            <p class="about-us__text">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius necessitatibus sint, deleniti
+                                quasi officiis ut culpa nobis, quam ipsam, voluptatem nemo pariatur corporis illo! Illo
+                                praesentium consequuntur esse dolor, odit beatae nisi perspiciatis voluptas voluptatum
+                                placeat inventore maiores provident in ipsam dolorum, qui animi incidunt non asperiores
+                                odio.
+                            </p>
+                        </div>
                     </article>
+                    <div class="about-us__wraper"></div>
                 </div>
             </div>
         </section>
