fix: modification de la tagline

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img src="./public/img/header_illustration.jpg" alt="Illustration d'une femme devant un ordinateur">
         </div>
         <div class="header__tagline">
-            <h1 class="header__title">Meilleure phrase d'accroche possible</h1>
+            <h1 class="header__title">Ciblez vos recrutements Microsoft</h1>
         </div>
     </header>
     <main class="main">
@@ -147,6 +147,7 @@
         </section>
         <section id="jobs" class="jobs">
 
+            <!-- TODO: carousel infini -->
             <div class="jobs__carousel">
                 <button class="jobs__control jobs__control--prev" aria-label="Précédent">
                     <span class="jobs__control-icon"><i class="fa-solid fa-chevron-left"></i></span>
