--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
                 </div>
                 <div class="profiles__item--3">
                     <div class="profiles__image">
-                        <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash" class="profiles__item-image">
+                        <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
+                            class="profiles__item-image">
                     </div>
                     <h3 class="profiles__item-title">
                         Power Plateform
@@ -831,6 +832,56 @@
                     </ul>
                 </div>
                 <button class="jobs-modal__button">Postuler</button>
+            </div>
+        </div>
+    </div>
+    <div class="profile-modal profile-modal--hidden" id="profile-detail-modal">
+        <div class="profile-modal__overlay"></div>
+        <div class="profile-modal__content">
+            <button class="profile-modal__close" aria-label="Fermer la modale">
+                &times;
+            </button>
+            <div class="profile-modal__body">
+                <h1 class="profile-modal__title">Spécialité</h1>
+                <div class="profile-modal__section">
+                    <h2 class="profile-modal__section-title">Expérience</h2>
+                    <div class="profile-modal__experience">
+                        <div class="profile-modal__experience-item">
+                            <p class="profile-modal__experience-header"><strong>2021-2023</strong> - Nom de l'entreprise
+                            </p>
+                            <p>Missions effectuées :</p>
+                            <p>- Développement et maintenance d’applications.</p>
+                            <p>- Conception de nouvelles fonctionnalités.</p>
+                            <p>- Collaboration avec l’équipe produit pour optimiser l’expérience utilisateur.</p>
+                        </div>
+                        <div class="profile-modal__experience-item">
+                            <p class="profile-modal__experience-header"><strong>2018-2021</strong> - Nom de l'entreprise
+                            </p>
+                            <p>Missions effectuées :</p>
+                            <p>- Gestion de projets techniques.</p>
+                            <p>- Coordination d’équipes pluridisciplinaires.</p>
+                            <p>- Mise en place de solutions adaptées aux besoins clients.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-modal__section">
+                    <h2 class="profile-modal__section-title">Compétences Techniques</h2>
+                    <ul class="profile-modal__list">
+                        <li>- Développement web : HTML, CSS, JavaScript</li>
+                        <li>- Backend : Node.js, PHP</li>
+                        <li>- Frameworks : React, Angular</li>
+                        <li>- Gestion de bases de données : MySQL, MongoDB</li>
+                    </ul>
+                </div>
+                <div class="profile-modal__section">
+                    <h2 class="profile-modal__section-title">Compétences Transversales</h2>
+                    <ul class="profile-modal__list">
+                        <li>- Gestion de projet</li>
+                        <li>- Communication efficace</li>
+                        <li>- Résolution de problèmes</li>
+                        <li>- Esprit d’équipe</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
