docu: nouvelle branche, travail sur Javascript

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <!-- TODO: faire appraître le glassmorphisme quand on scroll vers le bas -->
     <header class="header__container">
         <div class="header__logo">
             <a href="/">
