--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&display=swap"
         rel="stylesheet">
     <!-- TODO: ajouter la source des images -->
+
+
+    <!-- On importe Slick -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <!-- On importe notre script JS -->
+    <script src="./public/scripts/main.js" async defer></script>
 </head>
 
 <body>
-    <!-- TODO: faire appraître le glassmorphisme quand on scroll vers le bas -->
     <header class="header__container">
         <div class="header__logo">
             <a href="/">
@@ -143,24 +151,20 @@
             </div>
         </section>
         <section id="jobs" class="jobs">
-            <div class="jobs__content">
-                <h2 class="jobs__main-title">Trouvez votre prochaine mission</h2>
+            <div class="jobs__main-title">
+                <h2>Trouvez votre prochaine mission</h2>
             </div>
             <div class="jobs__image">
-                <img src="./public/img/microsoft_building.png" alt="">
+                <img src="./public/img/microsoft_building.png" alt="Image d'un bâtiment Microsoft">
             </div>
-            <!-- TODO: carousel infini -->
-            <div class="jobs__carousel">
-                <button class="jobs__control jobs__control--prev" aria-label="Précédent">
-                    <span class="jobs__control-icon"><i class="fa-solid fa-chevron-left"></i></span>
-                </button>
-                <div class="jobs__container">
-                    <article class="jobs__item">
-                        <h2 class="jobs__title">Job Title</h2>
+            <div id="carousel" class="jobs__carousel">
+                <article class="jobs__item">
+                    <div class="jobs__content">
+                        <h2 class="jobs__title">Intitulé du poste</h2>
                         <div class="jobs__infos">
                             <div class="jobs__salary">
                                 <i class="fa-solid fa-dollar-sign"></i>
-                                <p>30k€/an</p>
+                                <p>40k€/an</p>
                             </div>
                             <div class="jobs__duration">
                                 <i class="fa-regular fa-clock"></i>
@@ -173,42 +177,31 @@
                         </div>
                         <div class="jobs__description">
                             <p class="jobs__description--content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quae accusantium
-                                laboriosam? Autem eius esse reiciendis enim omnis! Autem praesentium minima, iure unde
-                                commodi veniam illo pariatur. Ipsam tempore hic aliquid, provident ipsum aliquam nostrum
-                                ab ratione beatae. Corrupti laudantium ducimus quasi expedita ea harum dolore optio
-                                dolorum earum eaque mollitia sit, doloribus iure maxime laborum, quidem id temporibus
-                                eum, quibusdam aspernatur dignissimos itaque recusandae. Soluta repudiandae dolorem
-                                quis, consequuntur reiciendis quos cum explicabo assumenda, unde molestiae, tempora
-                                libero doloribus maxime praesentium! Assumenda reprehenderit ut optio voluptas aliquam,
-                                commodi necessitatibus quo perferendis ipsum error vero illum maiores voluptatum eius
-                                quos ipsa. Eum expedita aliquid ex ipsa illum quaerat quasi similique, molestiae labore?
-                                Facilis, nostrum quidem. Cumque fuga accusamus mollitia numquam magni quia placeat
-                                provident repellat, eaque nisi deleniti dolor! Officia dolor numquam corrupti animi
-                                incidunt nihil harum, et deserunt ut consectetur maiores, cumque, nam exercitationem
-                                delectus blanditiis laborum vitae est!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis consectetur fugiat enim incidunt recusandae nulla doloribus vero culpa cum animi itaque necessitatibus, ex consequuntur repudiandae minima natus quae, aut quas sit molestiae explicabo blanditiis saepe modi! Aliquam dolorum esse incidunt doloribus eveniet at magnam modi assumenda officiis quam a necessitatibus aut, nobis ipsa repudiandae reiciendis in ipsam. Vero officiis vitae nostrum. Aspernatur corporis assumenda et? Iure harum dolor numquam modi ad incidunt repellendus doloribus, eligendi sunt ratione quia vel quidem. Animi, nemo quasi? Provident ducimus earum consectetur repellendus autem odio accusantium vero nostrum illum voluptatem.
                             </p>
                         </div>
                         <div class="jobs__tag">
                             <i class="fa-solid fa-tag"></i>
-                            <p class="jobs__tag--dynamics">Dynamics 365</p>
-                            <p class="jobs__tag--office">Office 365</p>
-                            <p class="jobs__tag--power">Power Platform</p>
-                            <p class="jobs__tag--net">.Net</p>
-                            <p class="jobs__tag--bi">PowerBi</p>
-                            <p class="jobs__tag--biztallk">Biztalk</p>
+                            <p class="jobs__tag--react">Dynamics 365</p>
+                            <p class="jobs__tag--js">Office 365</p>
+                            <p class="jobs__tag--css">Power Plateform</p>
+                            <p class="jobs__tag--css">BizTalk</p>
+                            <p class="jobs__tag--css">PowerBI</p>
+                            <p class="jobs__tag--css">.Net</p>
                         </div>
                         <div class="jobs__cta">
                             <button class="jobs__button">En savoir plus</button>
                             <button class="jobs__button">Postuler</button>
                         </div>
-                    </article>
-                    <article class="jobs__item">
-                        <h2 class="jobs__title">Job Title</h2>
+                    </div>
+                </article>
+                <article class="jobs__item">
+                    <div class="jobs__content">
+                        <h2 class="jobs__title">Intitulé du poste</h2>
                         <div class="jobs__infos">
                             <div class="jobs__salary">
                                 <i class="fa-solid fa-dollar-sign"></i>
-                                <p>30k€/an</p>
+                                <p>40k€/an</p>
                             </div>
                             <div class="jobs__duration">
                                 <i class="fa-regular fa-clock"></i>
@@ -221,90 +214,27 @@
                         </div>
                         <div class="jobs__description">
                             <p class="jobs__description--content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quae accusantium
-                                laboriosam? Autem eius esse reiciendis enim omnis! Autem praesentium minima, iure unde
-                                commodi veniam illo pariatur. Ipsam tempore hic aliquid, provident ipsum aliquam nostrum
-                                ab ratione beatae. Corrupti laudantium ducimus quasi expedita ea harum dolore optio
-                                dolorum earum eaque mollitia sit, doloribus iure maxime laborum, quidem id temporibus
-                                eum, quibusdam aspernatur dignissimos itaque recusandae. Soluta repudiandae dolorem
-                                quis, consequuntur reiciendis quos cum explicabo assumenda, unde molestiae, tempora
-                                libero doloribus maxime praesentium! Assumenda reprehenderit ut optio voluptas aliquam,
-                                commodi necessitatibus quo perferendis ipsum error vero illum maiores voluptatum eius
-                                quos ipsa. Eum expedita aliquid ex ipsa illum quaerat quasi similique, molestiae labore?
-                                Facilis, nostrum quidem. Cumque fuga accusamus mollitia numquam magni quia placeat
-                                provident repellat, eaque nisi deleniti dolor! Officia dolor numquam corrupti animi
-                                incidunt nihil harum, et deserunt ut consectetur maiores, cumque, nam exercitationem
-                                delectus blanditiis laborum vitae est!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis consectetur fugiat enim incidunt recusandae nulla doloribus vero culpa cum animi itaque necessitatibus, ex consequuntur repudiandae minima natus quae, aut quas sit molestiae explicabo blanditiis saepe modi! Aliquam dolorum esse incidunt doloribus eveniet at magnam modi assumenda officiis quam a necessitatibus aut, nobis ipsa repudiandae reiciendis in ipsam. Vero officiis vitae nostrum. Aspernatur corporis assumenda et? Iure harum dolor numquam modi ad incidunt repellendus doloribus, eligendi sunt ratione quia vel quidem. Animi, nemo quasi? Provident ducimus earum consectetur repellendus autem odio accusantium vero nostrum illum voluptatem.
                             </p>
                         </div>
                         <div class="jobs__tag">
                             <i class="fa-solid fa-tag"></i>
-                            <p class="jobs__tag--dynamics">Dynamics 365</p>
-                            <p class="jobs__tag--office">Office 365</p>
-                            <p class="jobs__tag--power">Power Platform</p>
-                            <p class="jobs__tag--net">.Net</p>
-                            <p class="jobs__tag--bi">PowerBi</p>
-                            <p class="jobs__tag--biztallk">Biztalk</p>
+                            <p class="jobs__tag--react">Dynamics 365</p>
+                            <p class="jobs__tag--js">Office 365</p>
+                            <p class="jobs__tag--css">Power Plateform</p>
+                            <p class="jobs__tag--css">BizTalk</p>
+                            <p class="jobs__tag--css">PowerBI</p>
+                            <p class="jobs__tag--css">.Net</p>
                         </div>
                         <div class="jobs__cta">
                             <button class="jobs__button">En savoir plus</button>
                             <button class="jobs__button">Postuler</button>
                         </div>
-                    </article>
-                    <article class="jobs__item">
-                        <h2 class="jobs__title">Job Title</h2>
-                        <div class="jobs__infos">
-                            <div class="jobs__salary">
-                                <i class="fa-solid fa-dollar-sign"></i>
-                                <p>30k€/an</p>
-                            </div>
-                            <div class="jobs__duration">
-                                <i class="fa-regular fa-clock"></i>
-                                <p>CDI</p>
-                            </div>
-                            <div class="jobs__place">
-                                <i class="fa-solid fa-location-dot"></i>
-                                <p>Metz</p>
-                            </div>
-                        </div>
-                        <div class="jobs__description">
-                            <p class="jobs__description--content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quae accusantium
-                                laboriosam? Autem eius esse reiciendis enim omnis! Autem praesentium minima, iure unde
-                                commodi veniam illo pariatur. Ipsam tempore hic aliquid, provident ipsum aliquam nostrum
-                                ab ratione beatae. Corrupti laudantium ducimus quasi expedita ea harum dolore optio
-                                dolorum earum eaque mollitia sit, doloribus iure maxime laborum, quidem id temporibus
-                                eum, quibusdam aspernatur dignissimos itaque recusandae. Soluta repudiandae dolorem
-                                quis, consequuntur reiciendis quos cum explicabo assumenda, unde molestiae, tempora
-                                libero doloribus maxime praesentium! Assumenda reprehenderit ut optio voluptas aliquam,
-                                commodi necessitatibus quo perferendis ipsum error vero illum maiores voluptatum eius
-                                quos ipsa. Eum expedita aliquid ex ipsa illum quaerat quasi similique, molestiae labore?
-                                Facilis, nostrum quidem. Cumque fuga accusamus mollitia numquam magni quia placeat
-                                provident repellat, eaque nisi deleniti dolor! Officia dolor numquam corrupti animi
-                                incidunt nihil harum, et deserunt ut consectetur maiores, cumque, nam exercitationem
-                                delectus blanditiis laborum vitae est!
-                            </p>
-                        </div>
-                        <div class="jobs__tag">
-                            <i class="fa-solid fa-tag"></i>
-                            <p class="jobs__tag--dynamics">Dynamics 365</p>
-                            <p class="jobs__tag--office">Office 365</p>
-                            <p class="jobs__tag--power">Power Platform</p>
-                            <p class="jobs__tag--net">.Net</p>
-                            <p class="jobs__tag--bi">PowerBi</p>
-                            <p class="jobs__tag--biztallk">Biztalk</p>
-                        </div>
-                        <div class="jobs__cta">
-                            <button class="jobs__button">En savoir plus</button>
-                            <button class="jobs__button">Postuler</button>
-                        </div>
-                    </article>
-                </div>
-                <button class="jobs__control jobs__control--next" aria-label="Suivant">
-                    <span class="jobs__control-icon"><i class="fa-solid fa-chevron-right"></i></span>
-                </button>
+                    </div>
+                </article>
             </div>
         </section>
+
         <section id="profiles" class="profiles">
             <h2 class="profiles__title">A la recherche d'un colaborateur?</h2>
             <div class="profiles__container">
