--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <!-- On importe notre script JS -->
-    <script src="./public/scripts/main.js" async defer></script>
+    <script src="./public/scripts/main.js" defer></script>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li class="header__nav-item">
-                    <a href="#contact-us" class="header__nav-link">
+                    <a href="#contact-us" class="header__nav-link" id="header__contact-us">
                         Nous contacter
                     </a>
                 </li>
@@ -158,80 +158,6 @@
                 <img src="./public/img/microsoft_building.png" alt="Image d'un bâtiment Microsoft">
             </div>
             <div id="carousel" class="jobs__carousel">
-                <article class="jobs__item">
-                    <div class="jobs__content">
-                        <h2 class="jobs__title">Intitulé du poste</h2>
-                        <div class="jobs__infos">
-                            <div class="jobs__salary">
-                                <i class="fa-solid fa-dollar-sign"></i>
-                                <p>40k€/an</p>
-                            </div>
-                            <div class="jobs__duration">
-                                <i class="fa-regular fa-clock"></i>
-                                <p>CDI</p>
-                            </div>
-                            <div class="jobs__place">
-                                <i class="fa-solid fa-location-dot"></i>
-                                <p>Metz</p>
-                            </div>
-                        </div>
-                        <div class="jobs__description">
-                            <p class="jobs__description--content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis consectetur fugiat enim incidunt recusandae nulla doloribus vero culpa cum animi itaque necessitatibus, ex consequuntur repudiandae minima natus quae, aut quas sit molestiae explicabo blanditiis saepe modi! Aliquam dolorum esse incidunt doloribus eveniet at magnam modi assumenda officiis quam a necessitatibus aut, nobis ipsa repudiandae reiciendis in ipsam. Vero officiis vitae nostrum. Aspernatur corporis assumenda et? Iure harum dolor numquam modi ad incidunt repellendus doloribus, eligendi sunt ratione quia vel quidem. Animi, nemo quasi? Provident ducimus earum consectetur repellendus autem odio accusantium vero nostrum illum voluptatem.
-                            </p>
-                        </div>
-                        <div class="jobs__tag">
-                            <i class="fa-solid fa-tag"></i>
-                            <p class="jobs__tag--react">Dynamics 365</p>
-                            <p class="jobs__tag--js">Office 365</p>
-                            <p class="jobs__tag--css">Power Plateform</p>
-                            <p class="jobs__tag--css">BizTalk</p>
-                            <p class="jobs__tag--css">PowerBI</p>
-                            <p class="jobs__tag--css">.Net</p>
-                        </div>
-                        <div class="jobs__cta">
-                            <button class="jobs__button">En savoir plus</button>
-                            <button class="jobs__button">Postuler</button>
-                        </div>
-                    </div>
-                </article>
-                <article class="jobs__item">
-                    <div class="jobs__content">
-                        <h2 class="jobs__title">Intitulé du poste</h2>
-                        <div class="jobs__infos">
-                            <div class="jobs__salary">
-                                <i class="fa-solid fa-dollar-sign"></i>
-                                <p>40k€/an</p>
-                            </div>
-                            <div class="jobs__duration">
-                                <i class="fa-regular fa-clock"></i>
-                                <p>CDI</p>
-                            </div>
-                            <div class="jobs__place">
-                                <i class="fa-solid fa-location-dot"></i>
-                                <p>Metz</p>
-                            </div>
-                        </div>
-                        <div class="jobs__description">
-                            <p class="jobs__description--content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis consectetur fugiat enim incidunt recusandae nulla doloribus vero culpa cum animi itaque necessitatibus, ex consequuntur repudiandae minima natus quae, aut quas sit molestiae explicabo blanditiis saepe modi! Aliquam dolorum esse incidunt doloribus eveniet at magnam modi assumenda officiis quam a necessitatibus aut, nobis ipsa repudiandae reiciendis in ipsam. Vero officiis vitae nostrum. Aspernatur corporis assumenda et? Iure harum dolor numquam modi ad incidunt repellendus doloribus, eligendi sunt ratione quia vel quidem. Animi, nemo quasi? Provident ducimus earum consectetur repellendus autem odio accusantium vero nostrum illum voluptatem.
-                            </p>
-                        </div>
-                        <div class="jobs__tag">
-                            <i class="fa-solid fa-tag"></i>
-                            <p class="jobs__tag--react">Dynamics 365</p>
-                            <p class="jobs__tag--js">Office 365</p>
-                            <p class="jobs__tag--css">Power Plateform</p>
-                            <p class="jobs__tag--css">BizTalk</p>
-                            <p class="jobs__tag--css">PowerBI</p>
-                            <p class="jobs__tag--css">.Net</p>
-                        </div>
-                        <div class="jobs__cta">
-                            <button class="jobs__button">En savoir plus</button>
-                            <button class="jobs__button">Postuler</button>
-                        </div>
-                    </div>
-                </article>
             </div>
         </section>
 
@@ -243,7 +169,7 @@
                         <img src="./public/img/dynamics365.jpg" alt="Merci à Clint Patterson sur Unsplash">
                     </div>
                     <h3 class="profiles__item-title">
-                        Dynamics 365
+                        Dynamics365
                     </h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
@@ -252,7 +178,7 @@
                         <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
                             class="profiles__item-image">
                     </div>
-                    <h3 class="profiles__item-title">Office 365</h3>
+                    <h3 class="profiles__item-title">Office365</h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--3">
@@ -261,7 +187,7 @@
                             class="profiles__item-image">
                     </div>
                     <h3 class="profiles__item-title">
-                        Power Plateform
+                        Power Platform
                     </h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
@@ -278,7 +204,7 @@
                         <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
                             class="profiles__item-image">
                     </div>
-                    <h3 class="profiles__item-title">Power BI</h3>
+                    <h3 class="profiles__item-title">PowerBi</h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--6">
@@ -351,7 +277,7 @@
     ----------------->
 
     <!-- Modal pour le formulaire de contact -->
-    <div class="contact contact--hidden" id="contact-modal">
+    <div class="contact" id="contact-modal">
         <div class="contact__overlay"></div>
         <div class="contact__content">
             <!-- TODO: changer pour une icone -->
@@ -727,46 +653,13 @@
     </div>
 
     <!-- Modal présentant le job détaillé -->
-    <div class="jobs-modal jobs-modal--hidden" id="job-detail-modal">
+    <div class="jobs-modal" id="job-detail-modal">
         <div class="jobs-modal__overlay"></div>
         <div class="jobs-modal__content">
             <button class="jobs-modal__close" aria-label="Fermer la modale">
                 &times;
             </button>
             <div class="jobs-modal__body">
-                <h1 class="jobs-modal__title">Intitulé du Job</h1>
-                <div class="jobs-modal__info">
-                    <p class="jobs-modal__salary"><strong>Salaire :</strong> 30k€ / an</p>
-                    <p class="jobs-modal__location"><strong>Lieu :</strong> Paris</p>
-                    <p class="jobs-modal__duration"><strong>Durée :</strong> CDI</p>
-                </div>
-                <div class="jobs-modal__section">
-                    <h2 class="jobs-modal__section-title">Description de l'entreprise</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget eros at neque dictum viverra.
-                    </p>
-                </div>
-                <div class="jobs-modal__section">
-                    <h2 class="jobs-modal__section-title">Description du poste</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac lorem et justo bibendum
-                        sodales.</p>
-                </div>
-                <div class="jobs-modal__section">
-                    <h2 class="jobs-modal__section-title">Missions</h2>
-                    <ul class="jobs-modal__list">
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li>Quisque ac lorem et justo bibendum sodales.</li>
-                        <li>Nullam id elit eu nisi euismod faucibus vel vitae arcu.</li>
-                    </ul>
-                </div>
-                <div class="jobs-modal__section">
-                    <h2 class="jobs-modal__section-title">Profil recherché</h2>
-                    <ul class="jobs-modal__list">
-                        <li>Expérience : 2-3 ans dans un poste similaire.</li>
-                        <li>Compétences : Lorem ipsum dolor sit amet.</li>
-                        <li>Langues : Anglais courant.</li>
-                    </ul>
-                </div>
-                <button class="jobs-modal__button">Postuler</button>
             </div>
         </div>
     </div>
@@ -778,146 +671,10 @@
             <button class="profile-modal__close" aria-label="Fermer la modale">
                 &times;
             </button>
-            <div class="profile-modal__body">
-                <h1 class="profile-modal__title">Spécialité</h1>
-                <div class="profile-modal__section">
-                    <h2 class="profile-modal__section-title">Expérience</h2>
-                    <div class="profile-modal__experience">
-                        <div class="profile-modal__experience-item">
-                            <p class="profile-modal__experience-header"><strong>2021-2023</strong> - Nom de l'entreprise
-                            </p>
-                            <p>Missions effectuées :</p>
-                            <p>- Développement et maintenance d'applications.</p>
-                            <p>- Conception de nouvelles fonctionnalités.</p>
-                            <p>- Collaboration avec l'équipe produit pour optimiser l'expérience utilisateur.</p>
-                        </div>
-                        <div class="profile-modal__experience-item">
-                            <p class="profile-modal__experience-header"><strong>2018-2021</strong> - Nom de l'entreprise
-                            </p>
-                            <p>Missions effectuées :</p>
-                            <p>- Gestion de projets techniques.</p>
-                            <p>- Coordination d'équipes pluridisciplinaires.</p>
-                            <p>- Mise en place de solutions adaptées aux besoins clients.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile-modal__section">
-                    <h2 class="profile-modal__section-title">Compétences Techniques</h2>
-                    <ul class="profile-modal__list">
-                        <li>- Développement web : HTML, CSS, JavaScript</li>
-                        <li>- Backend : Node.js, PHP</li>
-                        <li>- Frameworks : React, Angular</li>
-                        <li>- Gestion de bases de données : MySQL, MongoDB</li>
-                    </ul>
-                </div>
-                <div class="profile-modal__section">
-                    <h2 class="profile-modal__section-title">Compétences Transversales</h2>
-                    <ul class="profile-modal__list">
-                        <li>- Gestion de projet</li>
-                        <li>- Communication efficace</li>
-                        <li>- Résolution de problèmes</li>
-                        <li>- Esprit d'équipe</li>
-                    </ul>
-                </div>
-            </div>
+            <div class="profile-modal__carousel"></div>
         </div>
     </div>
 
-    <!-- Modal permettant de voir tous les profiles selon les technos -->
-    <div class="profiles-modal profiles-modal--hidden">
-        <div class="profiles-modal__overlay"></div>
-        <div class="profiles-modal__content">
-            <button class="profiles-modal__close" aria-label="Fermer la modale">&times;</button>
-            <div class="profiles-carousel">
-                <button class="profiles-control profiles-control--prev" aria-label="Précédent">
-                    <span class="profiles-control-icon"><i class="fa-solid fa-chevron-left"></i></span>
-                </button>
-                <div class="profiles-container">
-                    <article class="profiles-item">
-                        <h2 class="profiles-title">Développeur Full Stack</h2>
-                        <div class="profiles-infos">
-                            <div class="profiles-experience">
-                                <i class="fa-solid fa-briefcase"></i>
-                                <p>3 ans d'expérience</p>
-                            </div>
-                            <div class="profiles-location">
-                                <i class="fa-solid fa-location-dot"></i>
-                                <p>Metz</p>
-                            </div>
-                            <div class="profiles-availability">
-                                <i class="fa-regular fa-clock"></i>
-                                <p>Disponible immédiatement</p>
-                            </div>
-                        </div>
-                        <div class="profiles-description">
-                            <p class="profiles-description--content">
-                                Passionné par le développement, spécialisé en React.js et Node.js. Capable de
-                                travailler en
-                                équipe et
-                                de mener des projets de bout en bout avec une forte implication dans
-                                l'expérience
-                                utilisateur.
-                            </p>
-                        </div>
-                        <div class="profiles-tag">
-                            <i class="fa-solid fa-tag"></i>
-                            <p class="profiles-tag--skills">JavaScript</p>
-                            <p class="profiles-tag--skills">React</p>
-                            <p class="profiles-tag--skills">Node.js</p>
-                            <p class="profiles-tag--skills">MongoDB</p>
-                            <p class="profiles-tag--skills">TypeScript</p>
-                        </div>
-                        <div class="profiles-cta">
-                            <button class="profiles-button">Voir Profil</button>
-                            <button class="profiles-button">Contacter</button>
-                        </div>
-                    </article>
-                    <article class="profiles-item">
-                        <h2 class="profiles-title">Analyste Data</h2>
-                        <div class="profiles-infos">
-                            <div class="profiles-experience">
-                                <i class="fa-solid fa-briefcase"></i>
-                                <p>5 ans d'expérience</p>
-                            </div>
-                            <div class="profiles-location">
-                                <i class="fa-solid fa-location-dot"></i>
-                                <p>Strasbourg</p>
-                            </div>
-                            <div class="profiles-availability">
-                                <i class="fa-regular fa-clock"></i>
-                                <p>Disponible sous 1 mois</p>
-                            </div>
-                        </div>
-                        <div class="profiles-description">
-                            <p class="profiles-description--content">
-                                Expert en analyse de données et reporting. Conception et gestion de tableaux de
-                                bord avec
-                                Power BI
-                                et Tableau. Aptitude à transformer les données brutes en informations
-                                exploitables.
-                            </p>
-                        </div>
-                        <div class="profiles-tag">
-                            <i class="fa-solid fa-tag"></i>
-                            <p class="profiles-tag--skills">SQL</p>
-                            <p class="profiles-tag--skills">Power BI</p>
-                            <p class="profiles-tag--skills">Tableau</p>
-                            <p class="profiles-tag--skills">Python</p>
-                            <p class="profiles-tag--skills">Excel</p>
-                        </div>
-                        <div class="profiles-cta">
-                            <button class="profiles-button">Voir Profil</button>
-                            <button class="profiles-button">Contacter</button>
-                        </div>
-                    </article>
-                    <!-- Ajouter d'autres profils similaires -->
-                </div>
-                <button class="profiles-control profiles-control--next" aria-label="Suivant">
-                    <span class="profiles-control-icon"><i class="fa-solid fa-chevron-right"></i></span>
-                </button>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
