--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         </a>
                     </li>
                     <li class="footer__nav-item">
-                        <a href="#contact" class="footer__nav-link">
+                        <a href="#contact" class="footer__nav-link footer__contact-us">
                             Contact
                         </a>
                     </li>
